# backend/src/endpoints/files.py
@@ -1,6 +1,7 @@
 import mimetypes
 import os
 import json
+import time
 
 import connexion
 from flask import Flask, request, send_file, send_from_directory
@@ -31,16 +32,47 @@ def secureFileName(filename):
         return "New File" + file_type
     return secure_name + file_type
 
+def requestToUploadFile(project_id):
 
-def uploadFiles(project_id):
     files = connexion.request.files
-    current_path = root + getProjectPath(project_id) + "/" + connexion.request.values.get('path')
+    current_path = root + getProjectPath(project_id) + "/" + unquote(connexion.request.values.get('path'))
+    confirmation = connexion.request.values.get('conf')
 
-    for k, v in files.items():
-        upload_file(v, current_path)
+    for file in files.values():
+        return upload_file(file, current_path, confirmation)
 
-    return response('file(s) uploaded successfully', 200)
 
+def upload_file(file, path, confirmation):
+    if len(file.filename) > 0 and dir_exists(path):
+        file_name = file.filename
+        file_path = os.path.join(path, file_name)
+        if file_exists(file_path):
+            if confirmation == 'true':
+
+                while file_exists(file_path):
+                    try:
+                        os.remove(file_path)
+                    except:
+                        return response("Failed to replace file", 400)
+                else:
+                   file.save(os.path.join(path, file_name))
+                   return response("Succesfully replaced file", 200)
+
+            elif confirmation == 'false':
+                file_name = secureFileName(file_name)
+                new_file_name = getUniqueFileName(file_name, path, 0)
+                file.save(os.path.join(path, new_file_name))
+                return response("Succesfully uploaded file", 200)
+
+            else:
+                return response(file_name + " already exists would you like to replace it?", 409)
+
+        else:
+            file_name = secureFileName(file_name)
+            file.save(os.path.join(path, file_name))
+            return response("Succesfully uploaded file", 200)
+
+    return response("Failed to upload file", 400)
 
 def isFilePathValid(requested_path):
     if path_exists(requested_path) and not os.path.isdir(requested_path):
@@ -60,18 +92,6 @@ def getUniqueFileName(file_name_type, current_path, count):
         if file_exists(current_path + "/" + file_name  + " (" + str(count) + ")" + file_type):
             return getUniqueFileName(file_name_type, current_path, count + 1)
         return file_name + " (" + str(count) + ")" + file_type
-
-
-def upload_file(file, path):
-    if len(file.filename) > 0:
-        file_name = secureFileName(file.filename)
-        new_file_name = getUniqueFileName(file_name, path, 0)
-        if not dir_exists(path):
-            return response("File upload failed, directory doesn't exist", 400)
-        else:
-            file.save(os.path.join(path, new_file_name))  # this will save the file
-            return response('file uploaded successfully', 200)  # Display message after uploading
-    return response('file upload failed, no file was selected', 400)
 
 def getFilesInPath(project_id):
     folder_path = connexion.request.values.get('path')
